用Java标准库Base64组建替代sun私有的组件
方便高版本的JDK编译。